--- a/plutonium-cms-field.html
+++ b/plutonium-cms-field.html
@@ -232,7 +232,9 @@ CMS related components.
             },
             patchOverlay: function (e) {
                 if (e.target.withBackdrop) {
-                    e.target.parentNode.insertBefore(e.target._backdrop, e.target);
+                    
+                    document.querySelector('wonderjam-app').$.mainLayout.insertBefore(e.target._backdrop, e.target);
+//                    e.target.parentNode.insertBefore(e.target._backdrop, e.target);
                 }
             },
         });
