--- a/plutonium-cms-field.html
+++ b/plutonium-cms-field.html
@@ -106,7 +106,7 @@ CMS related components.
 
         <paper-fab-morph id="holder" is-overlay-content vertical-align="top" horizontal-align="right">
 
-            <paper-dialog  id="editorField"  no-overlap class="field-editors dropdown-content" modal elevation="2" on-iron-overlay-opened="patchOverlay" with-backdrop>
+            <paper-dialog  id="editorField"  no-overlap class="field-editors dropdown-content" elevation="2" on-iron-overlay-opened="patchOverlay" with-backdrop>
                 <h2>Edit {{contentModel.type}} properties</h2>
                 <!--<div class="layout horizontal">-->
                 <paper-dialog-scrollable>
@@ -233,8 +233,8 @@ CMS related components.
             patchOverlay: function (e) {
                 if (e.target.withBackdrop) {
                     
-                    document.querySelector('wonderjam-app').$.mainLayout.insertBefore(e.target._backdrop, e.target);
-//                    e.target.parentNode.insertBefore(e.target._backdrop, e.target);
+//                    document.querySelector('wonderjam-app').$.mainLayout.insertBefore(e.target._backdrop, e.target);
+                    e.target.parentNode.insertBefore(e.target._backdrop, e.target);
                 }
             },
         });
