--- a/plutonium-cms-text-editor.html
+++ b/plutonium-cms-text-editor.html
@@ -15,6 +15,7 @@ CMS related components.
         <style>
             :host {
                 display: inline-block;
+                @apply(--layout-vertical);
             }
 
             :host .card-content {
