--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../webcomponentsjs/webcomponents-lite.js"></script>
-    <script src="../web-animations-js/web-animations.html"></script>
+    <script src="../web-animations-js/web-animations.min.js"></script>
     <link rel="import" href="../iron-component-page/iron-component-page.html">
   </head>
   <body>
