--- a/plutonium-cms-image-editor.html
+++ b/plutonium-cms-image-editor.html
@@ -1,7 +1,11 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../paper-input/paper-input.html">
+<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
+
+<link rel="import" href="plutonium-cms-shared-styles.html">
 
 <link rel="import" href="plutonium-cms-field-behavior.html">
+
 <!--
 `plutonium-cms-image-editor`
 CMS related components.
@@ -11,9 +15,10 @@ CMS related components.
 
 <dom-module id="plutonium-cms-image-editor">
     <template>
-        <style>
+        <style include="plutonium-cms-shared-styles iron-flex">
             :host {
                 display: inline-block;
+                @apply(--layout-vertical);
             }
 
             :host .card-content {
@@ -43,10 +48,7 @@ CMS related components.
                 Plutonium.CmsFieldBehavior
             ],
             properties: {
-                prop1: {
-                    type: String,
-                    value: 'plutonium-cms-image-editor',
-                },
+                
             },
             _getValidity: function (value) {
                 var v = (this.$.titleInput.validate() &&
