--- a/plutonium-cms-video-display.html
+++ b/plutonium-cms-video-display.html
@@ -24,7 +24,10 @@ CMS related components.
             
         </style>
         <h2>[[contentModel.title]]</h2>
-        <video id="videoDisplay" class="layout center" width="{{contentModel.width}}" height="{{contentModel.height}}" controls="true" src="{{videoSrc}}" type="video/mp4" preload="auto"></video>
+        <video id="videoDisplay" class="layout center" width="{{contentModel.width}}" height="{{contentModel.height}}" controls="true" preload="auto">
+            
+            <source src="{{videoSrc}}" type="video/mp4">
+        </video>
     </template>
 
     <script>
