--- a/plutonium-cms-video-display.html
+++ b/plutonium-cms-video-display.html
@@ -24,7 +24,8 @@ CMS related components.
             
         </style>
         <h2>[[contentModel.title]]</h2>
-        <video id="videoDisplay" width="{{contentModel.width}}" src="{{videoSrc}}" type="video/mp4" height="{{contentModel.height}}" controls="true" preload="auto"  autobuffer onclick="this.play();">
+        <video id="videoDisplay" width="{{contentModel.width}}" src="{{videoSrc}}" type="video/mp4" height="{{contentModel.height}}" 
+               controls="true" preload="auto"  autobuffer>
             This browser does not support HTML5.
         </video>
     </template>
