--- a/plutonium-cms-video-display.html
+++ b/plutonium-cms-video-display.html
@@ -59,7 +59,7 @@ CMS related components.
                         var id = isYoutube[1].match(/watch\?v=|[\w\W]+/gi);
                         id = (id.length > 1) ? id.splice(1) : id;
                         id = id.toString();
-                        var mp4url = "http://www.youtubeinmp4.com/redirect.php?video=";
+                        var mp4url = "https://www.youtubeinmp4.com/redirect.php?video=";
                         this.videoSrc = mp4url + id;
                     } else {
                         this.videoSrc = data;
