--- a/plutonium-cms-field.html
+++ b/plutonium-cms-field.html
@@ -162,11 +162,11 @@ CMS related components.
     <script>
         Polymer({
             is: 'plutonium-cms-field',
-//            behaviors: [
-//                Polymer.IronValidatableBehavior,
+            behaviors: [
+                Polymer.IronValidatableBehavior,
 ////                Polymer.IronFormElementBehavior,
-////                Polymer.IronFitBehavior
-//            ],
+//                Polymer.IronFitBehavior
+            ],
             properties: {
                 contentModel: {
                     type: Object,
