--- a/demo/index_layout.html
+++ b/demo/index_layout.html
@@ -11,8 +11,8 @@
 
         <link rel="import" href="../plutonium-cms.html">
 
-        <style is="custom-style" include="demo-pages-shared-styles">
-        </style>
+<!--        <style is="custom-style" include="demo-pages-shared-styles">
+        </style>-->
     </head>
     <body>
 
