--- a/plutonium-cms-image-editor.html
+++ b/plutonium-cms-image-editor.html
@@ -4,7 +4,7 @@
 
 <link rel="import" href="plutonium-cms-shared-styles.html">
 
-<link rel="import" href="plutonium-cms-field-behavior.html">
+<link rel="import" href="plutonium-cms-overlay-behavior.html">
 
 <!--
 `plutonium-cms-image-editor`
@@ -45,7 +45,7 @@ CMS related components.
         Polymer({
             is: 'plutonium-cms-image-editor',
             behaviors: [
-                Plutonium.CmsFieldBehavior
+                Plutonium.CmsOverlayBehavior
             ],
             properties: {
                 
