--- a/plutonium-cms-overlay-behavior.html
+++ b/plutonium-cms-overlay-behavior.html
@@ -5,7 +5,7 @@
     
     window.Plutonium = window.Plutonium || {};
     
-    Plutonium.CmsFieldBehaviorImpl = {
+    Plutonium.CmsOverlayBehaviorImpl = {
 //        behaviors: [
 //            Polymer.IronValidatableBehavior
 //        ],
@@ -49,8 +49,8 @@
         },
     };
 
-    Plutonium.CmsFieldBehavior = [
+    Plutonium.CmsOverlayBehavior = [
         Polymer.IronValidatableBehavior,
-        Plutonium.CmsFieldBehaviorImpl
+        Plutonium.CmsOverlayBehaviorImpl
     ];
 </script>
