--- a/plutonium-cms-text-editor.html
+++ b/plutonium-cms-text-editor.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../paper-input/paper-input.html">
 <link rel="import" href="../paper-input/paper-textarea.html">
 
-<link rel="import" href="plutonium-cms-field-behavior.html">
+<link rel="import" href="plutonium-cms-overlay-behavior.html">
 <!--
 `plutonium-cms-text-editor`
 CMS related components.
@@ -35,7 +35,7 @@ CMS related components.
         Polymer({
             is: 'plutonium-cms-text-editor',
             behaviors: [
-                Plutonium.CmsFieldBehavior
+                Plutonium.CmsOverlayBehavior
             ],
             properties: {
                 contentModel: {
