--- a/plutonium-cms-video-editor.html
+++ b/plutonium-cms-video-editor.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../paper-input/paper-input.html">
 
-<link rel="import" href="plutonium-cms-field-behavior.html">
+<link rel="import" href="plutonium-cms-overlay-behavior.html">
 <!--
 `plutonium-cms-video-editor`
 CMS related components.
@@ -43,7 +43,7 @@ CMS related components.
                 
             },
             behaviors: [
-                Plutonium.CmsFieldBehavior
+                Plutonium.CmsOverlayBehavior
             ],
             observers: [
                 '_observeModel(contentModel)',
