--- a/plutonium-cms-image-display.html
+++ b/plutonium-cms-image-display.html
@@ -3,6 +3,8 @@
 <link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../iron-image/iron-image.html">
 
+<link rel="import" href="plutonium-cms-boxing-behavior.html">
+
 <!--
 `plutonium-cms-image-display`
 CMS related components.
@@ -35,6 +37,9 @@ CMS related components.
     <script>
         Polymer({
             is: 'plutonium-cms-image-display',
+            behaviors: [
+                Plutonium.CmsBoxingBehavior
+            ],
             properties: {
                 prop1: {
                     type: String,
