--- a/plutonium-cms-text-display.html
+++ b/plutonium-cms-text-display.html
@@ -16,10 +16,11 @@ CMS related components.
                 display: block;
             }
             :host p {
-                margin: 10px;
+                /*margin: 10px;*/
             }
             :host h2 {
-                margin: 10px;
+                 margin-top: 10px;
+                margin-bottom: 10px;
             }
         </style>
         <h2>[[contentModel.title]]</h2>
