--- a/plutonium-cms-video-display.html
+++ b/plutonium-cms-video-display.html
@@ -17,16 +17,17 @@ CMS related components.
                 display: block;
                 @apply(--layout-vertical);
             }
+            // TODO: add as mixin
             :host video {
-                margin: 10px;
             }
             :host h2 {
-                margin: 10px;
+                margin-top: 10px;
+                margin-bottom: 10px;
             }
 
         </style>
         <h2>[[contentModel.title]]</h2>
-        <video id="videoDisplay" width="{{contentModel.width}}" src="{{videoSrc}}" type="video/mp4" height="{{contentModel.height}}" 
+        <video id="videoDisplay" width="[[_effectiveWidth]]" height="[[_effectiveHeight]]" src="{{videoSrc}}" type="video/mp4" 
                controls="true" preload="auto"  autobuffer>
             This browser does not support HTML5.
         </video>
