--- a/plutonium-cms-div.html
+++ b/plutonium-cms-div.html
@@ -20,21 +20,23 @@ CMS related components.
                 display: inline-block;
                 /*position: relative;*/
                 @apply(--layout-vertical);
-                /*@apply(--layout-flex);*/
+                @apply(--layout-flex);
             }
             :host h1 {
-                margin: 10px;
+                margin-top: 10px;
+                margin-bottom: 10px;
             }
         </style>
         <h1>[[contentModel.title]]</h1>
-        <template is="dom-repeat" items="{{contentModel.sections}}" as="s">
-            <iron-pages class="field-displays" selected="{{s.type}}" attr-for-selected="name" fallback-selection="unknown">
-                <plutonium-cms-image-display content-model="[[s]]" name="image"></plutonium-cms-image-display>
-                <plutonium-cms-text-display content-model="[[s]]" name="text"></plutonium-cms-text-display>
-                <plutonium-cms-video-display content-model="[[s]]" name="video"></plutonium-cms-video-display>
-                <div name="unknown">This section of content is not displayable.</div>
-            </iron-pages>
-        </template>
+        <!--<div id="contentContainer"></div>-->
+        <!--        <template is="dom-repeat" items="{{contentModel.sections}}" as="s">
+                    <iron-pages class="field-displays" selected="{{s.type}}" attr-for-selected="name" fallback-selection="unknown">
+                        <plutonium-cms-image-display content-model="[[s]]" name="image"></plutonium-cms-image-display>
+                        <plutonium-cms-text-display content-model="[[s]]" name="text"></plutonium-cms-text-display>
+                        <plutonium-cms-video-display content-model="[[s]]" name="video"></plutonium-cms-video-display>
+                        <div name="unknown">This section of content is not displayable.</div>
+                    </iron-pages>
+                </template>-->
     </template>
 
     <script>
@@ -54,20 +56,39 @@ CMS related components.
                 },
             },
             observers: [
-                'sectionsAddedOrRemoved(contentModel.sections.splices)'
+                'sectionsAddedOrRemoved(contentModel.sections.*)'
             ],
             sectionsAddedOrRemoved: function (changeRecord) {
-                if (changeRecord) {
-                    changeRecord.indexSplices.forEach(function (s) {
-                        s.removed.forEach(function (user) {
+                if (changeRecord.splices) {
+                    changeRecord.splices.indexSplices.forEach(function (s) {
+                        s.removed.forEach(function (user, index) {
                             console.log(user.name + ' was removed');
+                            this.removeChild(this.$$('#contentSection' + index));
                         });
                         for (var i = 0; i < s.addedCount; i++) {
                             var index = s.index + i;
                             var newUser = s.object[index];
                             console.log('section ' + newUser.name + ' added at index ' + index);
+
+                            var display = document.createElement(this.identifyDisplay(newUser.type));
+                            display.id = 'contentSection' + index;
+                            display.contentModel = this.contentModel;
+                            display.verticalAlign = 'auto';
+                            display.horizontalAlign = 'auto';
+                            this.appendChild(display);
                         }
                     }, this);
+                } else {
+//                    var self = this;
+                    changeRecord.value.forEach(function (s, index) {
+                        var display = document.createElement(this.identifyDisplay(s.type));
+                        display.id = 'contentSection' + index;
+                        display.contentModel = s;
+                        display.verticalAlign = 'auto';
+                        display.horizontalAlign = 'auto';
+                        this.appendChild(display);
+                    }, this);
+
                 }
             },
             indexOfSection: function (name) {
@@ -77,6 +98,9 @@ CMS related components.
                             return (section.name === name);
                         }, this)[0]);
                 return index;
+            },
+            identifyDisplay: function (type) {
+                return 'plutonium-cms-' + type + '-display';
             }
         });
     </script>
