--- a/plutonium-cms-video-display.html
+++ b/plutonium-cms-video-display.html
@@ -14,12 +14,15 @@ CMS related components.
     <template>
         <style include="iron-flex">
             :host {
-                display: block;
-                @apply(--layout-vertical);
+                display: inline-block;
+
+
             }
             // TODO: add as mixin
-            :host video {
-            }
+/*            :host div.container {
+                @apply(--layout-vertical);
+                @apply(--layout-center);
+            }*/
             :host h2 {
                 margin-top: 10px;
                 margin-bottom: 10px;
@@ -27,10 +30,12 @@ CMS related components.
 
         </style>
         <h2>[[contentModel.title]]</h2>
-        <video id="videoDisplay" width="[[_effectiveWidth]]" height="[[_effectiveHeight]]" src="{{videoSrc}}" type="video/mp4" 
-               controls="true" preload="auto"  autobuffer>
-            This browser does not support HTML5.
-        </video>
+        <div class="layout vertical center">
+            <video id="videoDisplay" width="[[_effectiveWidth]]" height="[[_effectiveHeight]]" src="{{videoSrc}}" type="video/mp4" 
+                   controls="true" preload="auto"  autobuffer>
+                This browser does not support HTML5.
+            </video>
+        </div>
     </template>
 
     <script>
