--- a/plutonium-cms-boxing-behavior.html
+++ b/plutonium-cms-boxing-behavior.html
@@ -19,7 +19,7 @@
             },
             _effectiveHeight: {
                 type: Number,
-                computed: 'computeEffectiveHeight(contentModel.width, contentModel.height, _width)'
+                computed: 'computeEffectiveHeight(contentModel.width, contentModel.height, _effectiveWidth)'
             }
         },
         observers: [
